// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Spacing Component correctly 1`] = `
<div
  className="sc-hMqMXs hzAFPV"
  scale={undefined}
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 2`] = `
<div
  className="sc-hMqMXs jveXQW"
  scale="xxl"
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 3`] = `
<div
  className="sc-hMqMXs dEUlyi"
  scale="xxl"
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 4`] = `
<div
  className="sc-hMqMXs gApIUa"
  scale="xxl"
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 5`] = `
<div
  className="sc-hMqMXs lljqei"
  scale="xxl"
>
  Spacing
</div>
`;
